# onstro-db

./: .gitignore  CHANGELOG.md  CNAME  CONTRIBUTING.md  LICENSE  README.md  _config.yml  azure-pipelines.yml  requirements-dev.txt  requirements.txt  setup.cfg  tasks.todo  test_dupe.csv
.github/workflows/: pr-test.yml  pypi-upload.yml
docs/: index.md
docs/code/: add.md  chain.md  delete.md  get.md  initialize.md  schema.md  update.md
onstrodb/: __init__.py
onstrodb/cli/: common.py  main.py  utils.py
onstrodb/core/: _dataclass.py  db.py  utils.py
onstrodb/errors/: __init__.py  common_errors.py  schema_errors.py
tests/: test_db.py  test_schema.py  test_utils.py
