[metadata]
name = onstrodb
version = 0.1.0
author = Adwaith Rajesh
author_email = adwaithrajesh3180@gmail.com
long_description_content_type = text/markdown
url = https://github.com/Adwaith-Rajesh/onstro-db
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
packages = find:
python_requires = >=3.8.0
install_requires =
    pandas>=1.3.0

[options.packages.find]
exclude =
    tests*
    testing*

[options.entry_points]
console_scripts =
    onstro = onstrodb.cli.main:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
